--- a/ui/src/app.scss
+++ b/ui/src/app.scss
@@ -1,4 +1,5 @@
 @import "@material/typography/mdc-typography";
+@import 'svelte-material-ui/bare.css';
 
 .container {
   padding: 30px;
@@ -8,7 +9,9 @@ body {
   margin: 0;
   padding: 0;
 }
-
+.margins{
+  margin:10px 0;
+}
 .float-right {
   float: right;
 }
